Develop Machine Learning Models to Predict Bankruptcy

--- a/bankruptcy_prediction.ipynb
+++ b/bankruptcy_prediction.ipynb
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "UUeicf_wO0BN"
       },
-      "execution_count": 1,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "source": [
         "# Import and read the data.csv\n",
         "\n",
-        "url = \"https://raw.githubusercontent.com/jannatulhashi/bankruptcy_prediction/main/data.csv\"\n",
+        "url = \"https://raw.githubusercontent.com/jannatulhashi/predicting_bankrupt_companies/main/data.csv\"\n",
         "\n",
         "# Read the CSV file into a DataFrame\n",
         "bankruptcy_df = pd.read_csv(url)\n",
@@ -61,9 +61,9 @@
           "height": 343
         },
         "id": "vagIc3CuPCCl",
-        "outputId": "d89759c6-629d-4582-a181-d0c754042a2d"
+        "outputId": "2d758bb9-1191-4b60-9d40-6c81b29056a8"
       },
-      "execution_count": 2,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93a4e601-c71a-45c3-9469-4f61ccb46061\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3efda3a1-5df6-43af-9c48-030d24666284\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -327,7 +327,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93a4e601-c71a-45c3-9469-4f61ccb46061')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3efda3a1-5df6-43af-9c48-030d24666284')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -379,12 +379,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-93a4e601-c71a-45c3-9469-4f61ccb46061 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3efda3a1-5df6-43af-9c48-030d24666284 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-93a4e601-c71a-45c3-9469-4f61ccb46061');\n",
+              "        const element = document.querySelector('#df-3efda3a1-5df6-43af-9c48-030d24666284');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -404,8 +404,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-760bb2dd-3cbb-4eee-a982-600ef2fbd263\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-760bb2dd-3cbb-4eee-a982-600ef2fbd263')\"\n",
+              "<div id=\"df-5178578a-96db-41d8-a453-46fee3ad5f1c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5178578a-96db-41d8-a453-46fee3ad5f1c')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -524,7 +524,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-760bb2dd-3cbb-4eee-a982-600ef2fbd263 button');\n",
+              "        document.querySelector('#df-5178578a-96db-41d8-a453-46fee3ad5f1c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -535,7 +535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 53
         }
       ]
     },
@@ -2338,7 +2338,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# My observation after taining and tesiting report\n",
+        "# My observation after training and testing report\n",
         "Since my project's goal is to identify bankrupt companies, it's crucial to focus on metrics that specifically address the model's performance in correctly identifying the positive class (bankrupt companies).\n",
         "\n",
         "Considering both the training and testing data analysis,I should primarily focus on improving the following key metrics:\n",
@@ -3136,7 +3136,7 @@
       "source": [
         "**Analysis:**\n",
         "\n",
-        "The above pie and  bar graphs highlights the significance of various financial indicators in predicting company bankruptcies. From the graph, it's evident that the ability of a company to generate income relative to its total assets, as indicated by **\"NetIncomeToTotalAssets\"**, is the paramount predictor of bankruptcy risk. This underscores the idea that companies that are effective at turning their assets into profit have a lower bankruptcy likelihood. Other key metrics, such as **\"TotalDebt/TotalNetWorth\"**, hint at the role of debt management in assessing risk; companies with high debt relative to their net worth may be more vulnerable to insolvency. Additionally, operational measures like **\"OperatingProfitPerPerson\"** highlight the importance of productivity and efficiency. When a company can generate more profit per employee, it often signifies a healthy operational structure. In essence, this graph suggests that for a company to stave off bankruptcy, it should prioritize efficient asset management, maintain a manageable debt level, and foster a productive operational environment.\n",
+        "The above pie and  bar graphs highlight the significance of various financial indicators in predicting company bankruptcies. From the graph, it's evident that the ability of a company to generate income relative to its total assets, as indicated by **\"NetIncomeToTotalAssets\"**, is the paramount predictor of bankruptcy risk. This underscores the idea that companies that are effective at turning their assets into profit have a lower bankruptcy likelihood. Other key metrics, such as **\"TotalDebt/TotalNetWorth\"**, hint at the role of debt management in assessing risk; companies with high debt relative to their net worth may be more vulnerable to insolvency. Additionally, operational measures like **\"OperatingProfitPerPerson\"** highlight the importance of productivity and efficiency. When a company can generate more profit per employee, it often signifies a healthy operational structure. In essence, this graph suggests that for a company to stave off bankruptcy, it should prioritize efficient asset management, maintain a manageable debt level, and foster a productive operational environment.\n",
         "\n",
         "**In simple terms, companies that make good money, don't have too much debt and are efficient with their staff are in a safer position.**"
       ],
